--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,35 @@
 * {
-    background-color: beige;
+    background-color: #E5E7EB;
+    padding: 0;
+    margin: 0;
 }
 .grid {
     display: grid;
-    grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(16, 1fr);
+    grid-template-columns: repeat(16, 50px);
+    grid-template-rows: repeat(16, 50px);
+    justify-content: center;
+    align-content: center;
+    height: 90vh;
 }
 
 .cell {
-    background-color: gray;
-    height: 20px;
-    width: 20px;
+    background-color: white;
+    border-style: solid;
+    border: 1px solid #000;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-top: 20px;
+}
+
+button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    padding: 10px 40px 10px 40px;
+    font-size: 16px;
+    border: 1px solid black;
+    border-radius: 5px;
 }
