--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,15 @@
 }
 .grid {
     display: grid;
-    grid-template-columns: repeat(16, 50px);
-    grid-template-rows: repeat(16, 50px);
     justify-content: center;
     align-content: center;
     height: 90vh;
+    grid-template-rows: repeat(var(--grid-rows), var(--cell-size));
+    grid-template-columns: repeat(var(--grid-rows), var(--cell-size));
 }
 
 .cell {
-    background-color: white;
+    background-color: var(--color-var);
     border-style: solid;
     border: 1px solid #000;
 }
